--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_ENVIRONMENT=development
-VITE_PRODUCTION=""
+VITE_PRODUCTION=https://enrollmate-976cee73881a.herokuapp.com
 VITE_DEVELOPMENT=http://localhost:8000
