--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@daypilot/daypilot-lite-react": "^3.26.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
